--- a/src/blocks/modules/about/about.pug
+++ b/src/blocks/modules/about/about.pug
@@ -8,7 +8,7 @@ mixin about({ className = false })
             .about__row
                 .about__info-col
                     header.about__header    
-                        p.about__subtitle мы&nbsp;осуществляем деятельность по&nbsp;исследованию, подтверждению соответствия угля, разработке стандартов&nbsp;на угли и&nbsp;продукты их&nbsp;переработки.
+                        p.about__subtitle мы осуществляем деятельность по исследованию, подтверждению соответствия угля, разработке стандартов на угли и продукты их переработки. 
                     .about__info-wrapper 
                         .about__staff 
                             .about__slider.gallery(id="about-gallery")
