--- a/src/blocks/modules/faq/data.pug
+++ b/src/blocks/modules/faq/data.pug
@@ -7,7 +7,7 @@
             ],
         },
         {
-            title: "Как долго делается технический анализ угля (зола, влага, выход летучих веществ?",
+            title: "Как долго делается технический анализ угля (зола, влага, выход летучих веществ)?",
             description: [
                 "1 день",
             ],
@@ -21,7 +21,7 @@
         {
             title: "Производите ли Вы отбор проб?",
             description: [
-                "Производите ли Вы отбор проб?",
+                "Да",
             ],
         },
         {
