--- a/src/blocks/modules/intro/data.pug
+++ b/src/blocks/modules/intro/data.pug
@@ -2,7 +2,7 @@
     const sliderInfo = [
         {
             imgName: "slider-1",
-            description: "Отбор проб угля, коса и другие продукты со штабеля, с вагонов по нормативным документам РК",
+            description: "Отбор проб угля, кокса и другие продукты со штабеля, с вагонов по нормативным документам РК",
         },
         {
             imgName: "slider-2",
