--- a/src/blocks/modules/modal-about/modal-about.pug
+++ b/src/blocks/modules/modal-about/modal-about.pug
@@ -9,10 +9,27 @@ mixin modal-about({ className = false })
         slides: modalSlider
     })
         p.p-bold ТОО «НИЦ «Уголь» является одним из передовых предприятий, осуществляющих деятельность по исследованию, подтверждению соответствия угля, разработке стандартов на угли и продукты их переработки. 
-        p.p-sm Выполняем заказы государственных органов и хозяйствующих субъектов в рамках Республики Казахстан, СНГ, ЕАЭС, ВТО. Разрабатывает правовые, нормативные, технические, научные документы, осуществляет сертификацию, классификацию, кодификацию, идентификацию углей и продуктов их переработки, проводит около 100 видов анализов и испытаний, услуг.
-        p.p-bold ТОО «НИЦ «Уголь» является одним из передовых предприятий, осуществляющих деятельность по исследованию, подтверждению соответствия угля, разработке стандартов на угли и продукты их переработки. 
-        p.p-sm Выполняем заказы государственных органов и хозяйствующих субъектов в рамках Республики Казахстан, СНГ, ЕАЭС, ВТО. Разрабатывает правовые, нормативные, технические, научные документы, осуществляет сертификацию, классификацию, кодификацию, идентификацию углей и продуктов их переработки, проводит около 100 видов анализов и испытаний, услуг.
-        p.p-bold ТОО «НИЦ «Уголь» является одним из передовых предприятий, осуществляющих деятельность по исследованию, подтверждению соответствия угля, разработке стандартов на угли и продукты их переработки. 
-        p.p-sm Выполняем заказы государственных органов и хозяйствующих субъектов в рамках Республики Казахстан, СНГ, ЕАЭС, ВТО. Разрабатывает правовые, нормативные, технические, научные документы, осуществляет сертификацию, классификацию, кодификацию, идентификацию углей и продуктов их переработки, проводит около 100 видов анализов и испытаний, услуг.
-        p.p-bold ТОО «НИЦ «Уголь» является одним из передовых предприятий, осуществляющих деятельность по исследованию, подтверждению соответствия угля, разработке стандартов на угли и продукты их переработки. 
-        p.p-sm Выполняем заказы государственных органов и хозяйствующих субъектов в рамках Республики Казахстан, СНГ, ЕАЭС, ВТО. Разрабатывает правовые, нормативные, технические, научные документы, осуществляет сертификацию, классификацию, кодификацию, идентификацию углей и продуктов их переработки, проводит около 100 видов анализов и испытаний, услуг.
+        p.p-sm История организации стартует с ноября 2000 года. За годы работы предприятие заслужило уважение и высокую деловую репутацию.
+        p.p-sm Основными видами деятельности организации являются: 
+        ul.p-sm
+            li • подтверждение соответствия продукции установленным требованиям.
+            li • проведение испытаний продукции;
+            li • работы в области стандартизации;
+            li • проведение научно-исследовательских работ.
+        p.p-sm Подтверждение соответствия продукции установленным требованиям осуществляется Органом по подтверждению соответствия (далее - ОПС) продукции, входящим в организационную структуру ТОО «НИЦ «Уголь» (аттестат аккредитации № KZ.О.10.0562 от 08.12.2014 г.). ОПС работает на базе собственной независимой  испытательной лаборатории ТОО «НИЦ «Уголь».
+        p.p-sm Проведение испытаний углей и продуктов их переработки выполняется в аккредитованной испытательной лаборатории (далее - ИЛ) (аттестат аккредитации № KZ.Т.10.0560 от 28.10.2014 г.), оснащенной всем необходимым испытательным оборудованием (далее - ИО) и средствами измерений (далее - СИ).
+        p.p-sm ТОО «НИЦ «Уголь» разрабатывает межгосударственные и национальные стандарты. С этой целью на базе организации создан Технический комитет по стандартизации №6 «Уголь и продукты его переработки» (ТК 6), в состав которого входят ведущие угледобывающие и перерабатывающие предприятия, проектные институты, государственные органы. В 2008 году ТК 6 включен в состав международного технического комитета по стандартизации № 27. С 2011 года ТК 6 работает в составе МТК 179 «Уголь и продукты его переработки».
+        p.p-sm Проведение научно-исследовательских работ осуществляется по угледобывающей и перерабатывающей отраслям промышленности (добыча углей, рассортировка, обогащение, брикетирование, коксование, полукоксование и др.) на базе изучения научных, технических, технологических, нормативных документов и проведения необходимых лабораторных и промышленных испытаний.
+        p.p-sm Существующий устойчивый спрос на виды услуг, предоставляемых ТОО «НИЦ «Уголь», позволяет организации уверенно смотреть в будущее. 
+        p.p-sm В случае возникновения вопросов по сертификации углей и продуктов их переработки, просим обращаться по телефонам: 
+        ul.p-sm
+            each phone in config.phone 
+                li.mb-0
+                    a.link.link_size_medium.mb-4(href=`tel:${phone.tel}`) !{phone.number}
+                    |  !{phone.text.short}
+        p.p-sm.mb-4 или по е-mail:
+        ul.p-sm
+            li.mb-0
+                a.link.link_alpha.link_underline(href="mailto:info@nicugol.kz") info@nicugol.kz
+            li
+                a.link.link_alpha.link_underline(href="mailto:nicugol@yandex.ru") nicugol@yandex.ru
