--- a/src/blocks/modules/modal-services/modal-services.pug
+++ b/src/blocks/modules/modal-services/modal-services.pug
@@ -1,6 +1,19 @@
 mixin modal-services({ className = false })
     include ../../components/modal-template/modal-template
     include ../services/data
+    -
+        const pdfArr = [
+            "испытательная_лаборатория",
+            "анкета_удовлетворенности_потребителей",
+            "знаки_соответствия",
+            "информация_о_финансировании",
+            "нормативные_документы_по_сертификации",
+            "политика_по_беспристрастности_ОПС",
+            "порядок_подтверждения_соответствия",
+            "порядок_рассмотрения_жалоб_и_апелляций",
+            "права_и_обязанности_заявителей",
+            "приостановление_и_отмена_действия_выданных_сертификатов_соответствия",
+        ];
     
     each modal in servicesList
         +modal-template({
@@ -11,6 +24,7 @@ mixin modal-services({ className = false })
             iconName: modal.iconName,
             advantage: modal.advantage,
             dotsPosition: modal.dotsPosition ? modal.dotsPosition : [],
+            pdf: modal.pdf,
         })
             if (modal.iconName === "services_labaratory")
                 p.p-bold Испытательная лаборатория (ИЛ) является структурным подразделением ТОО «Научно-исследовательский центр «Уголь» (ТОО «НИЦ «Уголь»), обеспечивающий до 95% всего объема работ организации. ИЛ выполняет все виды лабораторных и технологических исследований, и осуществляет отбор проб.
@@ -46,7 +60,8 @@ mixin modal-services({ className = false })
                     li • Гуминовые препараты;
                     li • Золы-уноса.
             if (modal.iconName === "services_checklist")
-                p.p-bold Орган по подтверждению соответствия является структурным подразделением  юридического лица ТОО «НИЦ «Уголь». <br>Орган по подтверждению соответствия ТОО «НИЦ «Уголь» аккредитован в национальной системе аккредитации (аттестат аккредитации № KZ.О.10.0562 от 08.12.2014 г.). Имеет собственную аккредитованную испытательную лабораторию (аттестат аккредитации № KZ.Т.10.0560 от 28.10.2014 г.).
+                p.p-bold Орган по подтверждению соответствия является структурным подразделением юридического лица ТОО «НИЦ «Уголь».
+                p.p-sm Орган по подтверждению соответствия ТОО «НИЦ «Уголь» аккредитован в национальной системе аккредитации (аттестат аккредитации № KZ.О.10.0562 от 14.02.2020 г.). Имеет собственную аккредитованную испытательную лабораторию (аттестат аккредитации № KZ.Т.10.0560 от 19.12.2019 г.).
                 p.p-sm Область аккредитации Органа по подтверждению соответствия ТОО «НИЦ «Уголь» распространяется на:
                 ul.p-sm 
                     li • угли рядовые всех марок;
@@ -58,23 +73,28 @@ mixin modal-services({ className = false })
                     li • масло и другие продукты высокотемпературной перегонки каменноугольной смолы;
                     li • активированные угли.
                 p.p-sm Каждый сотрудник Органа по подтверждению соответствия гарантирует беспристрастное, качественное выполнение работ по подтверждению соответствия и обеспечение конфиденциальности информации Заявителя.
-                p.p-sm Область аккредитации ОПС ТОО «НИЦ «Уголь» включает: уголь каменный и антрацит, уголь бурый и лигнит: рядовой, необогащенный, обогащенный (концентрат), промпродукт, порода, шлам, отсев; горючие сланцы; агломерированное топливо (брикеты и прочие); уголь активированный (адсорбенты); кокс, полукокс, смолы, масла и другие продукты переработки угля.
-                p.p-sm Подтверждение соответствия (сертификация) указанной продукции проводится на соответствие требованиям национальных, межгосударственных, международных стандартов и других нормативных документов. Исследование продукции в собственной независимой аккредитованной угольной лаборатории проводится по следующим показателям:
-                ul.p-sm 
-                    li • отбор проб продукции;
-                    li • показатели безопасности: зольность, массовая доля общей серы, массовая доля хлора, массовая доля мышьяка, окисленность;
-                    li • температура воспламенения, температура самовоспламенения углей и продуктов их переработки;
-                    li • группа взрывоопасности топлива;
-                    li • удельная активность природных радионуклидов выполняются в субподрядном аккредитованном испытательном центре ТОО «ЭкоЭксперт»;
-                    li • показатели идентификации, классификации, кодификации: технологическая марка (группа, подгруппа), ранг (категория, подкатегория), гранулометрический состав, кодовое число.
-                p.p-sm ОПС и ИЛ ТОО «НИЦ «Уголь» выполняет и другие анализы углей и продуктов их переработки (всего около 100 анализов).
+                p.p-sm Подтверждение соответствия (сертификация) указанной продукции проводится на соответствие требованиям национальных, межгосударственных, международных стандартов и других нормативных документов.
+                each pdf in pdfArr
+                    a.modal-template__link-inner.link.link_icon.link_size_small(href=pdf target="_blank") 
+                        +icon({
+                            iconName: 'pdf',
+                            className: 'link__icon',
+                            viewBoxName: '0 0 22 28'
+                        })
+                        | !{pdf.slice(0, 1).toUpperCase() + pdf.slice(1).split("_").join(' ')}
             if (modal.iconName === "services_certificate")
-                p.p-bold Занимается разработкой нормативных документов (Национальные (государственные) стандарты Республики Казахстан - СТ РК, Межгосударственные стандарты – ГОСТ, Технические регламенты, Паспорта безопасности) 
-                p.p-sm На базе организации (ТОО «НИЦ «Уголь» создан Технический комитет по стандартизации №6 «Уголь и продукты его переработки» (ТК 6), в состав которого входят ведущие угледобывающие и перерабатывающие предприятия, проектные институты, государственные органы. 
-                p.p-sm Проведение научно-исследовательских работ осуществляется по угледобывающей и перерабатывающей отраслям промышленности (добыча углей, рассортировка, обогащение, брикетирование, коксование, полукоксование и др.) на базе изучения научных, технических, технологических, нормативных документов и проведения необходимых лабораторных и промышленных испытаний.
+                p.p-bold Разработка нормативных документов (Национальные (государственные) стандарты Республики Казахстан - СТ РК, Межгосударственные стандарты – ГОСТ, Технические регламенты, Паспорта безопасности) 
+                p.p-sm Отдел стандартизации выполняет следующие работы:
+                ul.p-sm 
+                    li • подготовка предложений по определению основных  направлений  развития государственной системы технического регулирования топливно-энергетического комплекса;
+                    li • разработка нормативных документов по стандартизации: технических регламентов, национальных, межгосударственных, международных стандартов, стандартов организаций;
+                    li • разработка паспортов безопасности и технологических регламентов;
+                    li • подготовка изменений к действующим нормативным документам по стандартизации;
+                    li • подготовка предложений в Планы государственной стандартизации и Программы по межгосударственной стандартизации;
+                    li • организация технического обсуждения проектов стандартов. 
+                p.p-sm На базе ТОО «НИЦ «Уголь» создан Технический комитет по стандартизации ТК 6 «Уголь и продукты его переработки», в состав которого входят ведущие угледобывающие и перерабатывающие предприятия, проектные институты, государственные органы.
+                p.p-sm Отдел стандартизации участвует в работах технических комитетов по межгосударственной стандартизации – МТК 179 «Уголь и продукты его переработки» и международной стандартизации – ISO/TC 27 «Твердое минеральное топливо».
             if (modal.iconName === "services_microscope")
-                p.p-bold Научная деятельность: сюда входят научные отчеты, делаем анализ на основании проведеных испытаний. Также выдаем заключения по запросу клиента.
-                p.p-sm 
-                    b Отдел Науки ТОО «Научно-исследовательский центр «Уголь» г. Караганда.
+                p.p-bold Отдел Науки ТОО «Научно-исследовательский центр «Уголь» г. Караганда.
                 p.p-sm Отдел науки тесно работает с Испытательной лабораторией и проводит исследования углей и продуктов переработки с целью определения направлений использования, изучения свойств углей новых месторождений, возможности его коксования, брикетирования и тд, разработки Стандартов Организаций для дальнейшей сертификации продуктов.
                 p.p-sm Конечным результатом исследовательских работ является Отчет по Научно-Исследовательской работе.
