--- a/src/blocks/modules/services/data.pug
+++ b/src/blocks/modules/services/data.pug
@@ -19,6 +19,7 @@
                     left: "17%",
                 },
             ],
+            pdf: "испытательная_лаборатория",
 
             slides: [
                 {
