--- a/src/blocks/modules/services/services.pug
+++ b/src/blocks/modules/services/services.pug
@@ -15,5 +15,5 @@ mixin services({ className = false })
                         title: service.title, 
                         description: service.description,
                         advantage: service.advantage,
-                        dotsPosition: service.dotsPosition
+                        dotsPosition: service.dotsPosition,
                     })
