--- a/src/blocks/modules/contacts/contacts.scss
+++ b/src/blocks/modules/contacts/contacts.scss
@@ -14,7 +14,7 @@
 
     &__title {
         @include h2();
-        margin-bottom: 20px;
+        margin-bottom: 28px;
         color: $alpha;
     }
 
@@ -30,11 +30,11 @@
     }
 
     &__links {
-        margin-bottom: 23px;
+        margin-bottom: 19px;
     }
 
     &__link-item {
-        margin-bottom: 6px;
+        margin-bottom: 8px;
 
         &:last-child {
             margin-bottom: 0;
@@ -57,8 +57,16 @@
     }
 
     &__description {
-        margin-bottom: 16px;
+        margin-bottom: 14px;
         line-height: 150%;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    &__description-block {
+        margin-bottom: 24px;
     }
 
     &__socials-list {
@@ -93,8 +101,6 @@
         @include size(4);
         @include size-lg(6);
         @include size-md(12);
-        display: flex;
-        flex-direction: column;
         @media (max-width: $break_lg) {
             margin-top: 32px;
         }
