--- a/src/blocks/modules/request/request.scss
+++ b/src/blocks/modules/request/request.scss
@@ -122,7 +122,7 @@
         @include h4();
         margin-bottom: 32px;
         font-weight: 600;
-        line-height: 136%;
+        line-height: 137%;
     }
 
     &__form-body {
@@ -178,5 +178,9 @@
         size: cover;
         position: top center;
         attachment: fixed;
+    }
+    .ios & {
+        background-size: auto 100%;
+        background-attachment: local;
     }
 }
