--- a/src/blocks/modules/steps/steps.scss
+++ b/src/blocks/modules/steps/steps.scss
@@ -32,7 +32,7 @@
     }
 
     &__title {
-        @include h1();
+        @include h2();
         margin-bottom: 8px;
     }
 
@@ -40,6 +40,7 @@
         @include h4();
         max-width: 522px;
         font-weight: 600;
+        line-height: 150%;
     }
 
     &__list {
@@ -64,18 +65,22 @@
             margin-right: $offset;
             margin-top: 30px;
 
-            &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+            &:nth-child(1),
+            &:nth-child(2),
+            &:nth-child(3) {
                 margin-top: 0;
             }
         }
         @media (max-width: $break_md) {
             flex-basis: calc(50% - #{$offset} * 2);
 
-            &, &:nth-child(3) {
+            &,
+            &:nth-child(3) {
                 margin-top: 30px;
             }
 
-            &:nth-child(1), &:nth-child(2) {
+            &:nth-child(1),
+            &:nth-child(2) {
                 margin-top: 0;
             }
         }
@@ -115,12 +120,14 @@
 
     &__item-title {
         margin-bottom: 8px;
+        font-size: inherit;
+        line-height: 135%;
         font-weight: 600;
     }
 
     &__item-description {
         @include p-sm();
-        line-height: 154%;
+        line-height: 148%;
     }
     padding: {
         top: 41px;
