--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -68,7 +68,7 @@ html(lang="ru")
 		meta(property="og:image" content="img/opengraph.jpg")
 		meta(name="theme-color" content="#fff")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
-		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		meta(name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1")
 		link(rel="shortcut icon" href="img/favicons/favicon.ico" type="image/x-icon")
 		link(rel="icon" sizes="16x16" href="img/favicons/favicon-16x16.png" type="image/png")
 		link(rel="icon" sizes="32x32" href="img/favicons/favicon-32x32.png" type="image/png")
@@ -97,4 +97,10 @@ html(lang="ru")
 			+footer({
 				className: page === "home" ? "footer_theme_alpha" : "footer_theme_light",
 			})
+			a.link-top(href="#home")
+				+icon({
+					iconName: 'arrow-top', 
+					className: 'link-top__icon',
+					viewBoxName: '0 0 15 17'
+				})
 		block scripts
